
namespace TeamTactics.Domain.Teams
{
    public enum TeamStatus
    {
        Draft,
        Locked
    }
}
