@startuml Team
hide enum methods
skinparam Linetype Ortho

package TeamAggregate <<Rectangle>> {
    class Team <<AggregateRoot>> {
        +int Id
        +string Name
        +TeamStatus Status
        +int UserId
        +int TournamentId
        -List<TeamPlayer> _players
        +IReadOnlyCollection<TeamPlayer> Players

        +void AddPlayer(Player player)
        +void RemovePlater(int playerId)
        +void SetCaptain()
        +void Lock()
        +void EnrollInTournament(Tournament tournament)
    }

    enum TeamStatus {
        Draft
        Locked
    }

    class TeamPlayer {
        +int PlayerId 
        +bool IsCaptain   
    }

    Team o-- TeamStatus
    Team *-- "0..11" TeamPlayer
}

Team - Player
Team - Tournament

hide Player members
hide Tournament members
@enduml 